fixed low spacing for images in posts, fixed description for puppet masters post

--- a/src/style/basepage.less
+++ b/src/style/basepage.less
@@ -25,10 +25,6 @@
             word-spacing: 2px;
         }
 
-        .gatsby-resp-image-wrapper {
-            margin: 10px auto !important;
-        }
-
         img {
             max-width: 100%;
         }
