--- a/src/style/post-singlepage.less
+++ b/src/style/post-singlepage.less
@@ -26,8 +26,10 @@
         margin-top: 80px;
         padding: 0 40px;
 
-        .gatsby-resp-image-wrapper {
-            margin: 0 auto !important;
+        p {
+            span{
+                margin: 30px auto !important;
+            }
         }
 
         img {
